# st_idx_visualizer

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  app.py  csv_update.md  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
config/: config.py  financial_factors_config.py  param_cls.py  style_config.py
data/csv/: bond_yields.csv  economic_data.csv  financial_factors_backtest_nav.csv  financial_factors_stocks.csv  index_prices.csv  index_valuations.csv  shibor_prices.csv  sw_industry_classes.csv
data_preparation/: data_access.py  data_analyzer.py  data_fetcher.py  data_processor.py  db.py
docs/archived/: csv_update.md
openspec/: project.md
openspec/changes/archive/2025-12-08-refactor-style-config-and-charts/: design.md  tasks.md
openspec/changes/archive/2025-12-12-update-index-price-csv-zh-headers/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-04-add-financial-factors-backtest-nav-chart/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-04-add-financial-factors-backtest-nav-charts-leaders-growth/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-04-add-financial-factors-stock-pools/: design.md  proposal.md  tasks.md
openspec/changes/refactor-data-layer/: proposal.md  tasks.md
openspec/changes/refactor-pre-release-foundation/: design.md  proposal.md  tasks.md
openspec/changes/refactor-style-config-and-charts/: design.md  proposal.md  tasks.md
openspec/specs/data-access/: spec.md
openspec/specs/dev-workflow/: spec.md
openspec/specs/visualization/: spec.md
ops/: run_streamlit.ps1
scripts/: run_quick_checks.py
sql_template/: query_a_index_valuation.sql  query_edb.sql  query_idx_price.sql  query_shibor_prices.sql  query_yield_curve.sql
tests/: test_backtest_nav_performance.py  test_data_fetcher_schema.py  test_financial_factors_stock_pool.py  test_stg_idx_prep.py  test_style_prep.py
visualization/: data_visualizer.py  financial_factors_stocks.py  stg_idx.py  style.py
(+24 files in other folders)
