[project]
name = "st-idx-visualizer"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "logging>=0.4.9.6",
    "pathlib>=1.0.1",
    "pydantic>=2.6.4",
    "ruff>=0.5.2",
    "streamlit>=1.38.0",
    "psycopg2-binary>=2.9.9",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.0",
    "watchdog>=6.0.0",
    "sqlalchemy>=2.0.36",
]
