[project]
name = "st-idx-visualizer"
version = "0.3.0"
description = "Streamlit dashboard for strategy index visualization and style diagnostics (CSV-backed)."
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "pydantic>=2.6.4",
    "streamlit==1.48.0",
    "python-dotenv>=1.0.0",
    "watchdog<=5.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.5.2",
]

[tool.pytest.ini_options]
markers = [
    "style_prep: fast checks for style data-prep helpers",
    "schema: schema-level invariants for CSV-backed datasets",
    "stg_idx_prep: fast checks for strategy-index data-prep helpers",
]
